# NN_library

./: Activation.cpp  Activation.h  CMakeLists.txt  README.md  ReseauNeuronal.cpp  VisualisationReseauNeuronal.h
